--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,7 +45,8 @@ javac.classpath=\
     ${libs.javax.mail.classpath}:\
     ${libs.akka.classpath}:\
     ${libs.scala.classpath}:\
-    ${libs.Dependencias_Programa_De_Vendas.classpath}
+    ${libs.AbsoluteLayout.classpath}:\
+    ${libs.mysql-connector.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
