--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,7 +46,15 @@ javac.classpath=\
     ${libs.akka.classpath}:\
     ${libs.scala.classpath}:\
     ${libs.AbsoluteLayout.classpath}:\
-    ${libs.mysql-connector.classpath}
+    ${libs.mysql-connector.classpath}:\
+    ${libs.beansbinding-1.2.1.classpath}:\
+    ${libs.mysql-connector-java-5.1.23-bin.classpath}:\
+    ${libs.javax.mail-1.3.3.01.classpath}:\
+    ${libs.joda-time-2.9.9.classpath}:\
+    ${libs.scala-library-2.9.1.classpath}:\
+    ${libs.email-service-akka-1.0-SNAPSHOT.classpath}:\
+    ${libs.akka-actor.classpath}:\
+    ${libs.gson-2.8.2-SNAPSHOT.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
