--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,26 @@ dist.jar=${dist.dir}/Sistema.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\AbsoluteLayout.jar
+file.reference.akka-actor.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\akka-actor.jar
+file.reference.apache-commons-lang.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\apache-commons-lang.jar
+file.reference.beansbinding-1.2.1.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\beansbinding-1.2.1.jar
+file.reference.com.sun.jersey.jersey-core-1.4.0.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\com.sun.jersey.jersey-core-1.4.0.jar
+file.reference.commons-email-1.5.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\commons-email-1.5.jar
+file.reference.gson-2.8.2-SNAPSHOT.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\gson-2.8.2-SNAPSHOT.jar
+file.reference.javax.servlet.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\javax.servlet.jar
+file.reference.jersey-apache-client-1.6.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\jersey-apache-client-1.6.jar
+file.reference.jersey-bundle-1.7.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\jersey-bundle-1.7.jar
+file.reference.jersey-client-1.6-sources.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\jersey-client-1.6-sources.jar
+file.reference.jettison-1.0.3.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\jettison-1.0.3.jar
+file.reference.joda-time-2.9.9.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\joda-time-2.9.9.jar
+file.reference.mail-1.4.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\mail-1.4.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\mysql-connector-java-5.1.23-bin.jar
+file.reference.org-apache-commons-codec.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\org-apache-commons-codec.jar
+file.reference.org-apache-commons-logging.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\org-apache-commons-logging.jar
+file.reference.org.apache.commons.httpclient.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\org.apache.commons.httpclient.jar
+file.reference.scala-library-2.9.1.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\scala-library-2.9.1.jar
+file.reference.sdkMercado_Pago-0.3.4.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\sdkMercado_Pago-0.3.4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -45,7 +65,6 @@ javac.classpath=\
     ${libs.javax.mail.classpath}:\
     ${libs.akka.classpath}:\
     ${libs.scala.classpath}:\
-    ${libs.AbsoluteLayout.classpath}:\
     ${libs.mysql-connector.classpath}:\
     ${libs.beansbinding-1.2.1.classpath}:\
     ${libs.mysql-connector-java-5.1.23-bin.classpath}:\
@@ -58,7 +77,27 @@ javac.classpath=\
     ${libs.Jettison.classpath}:\
     ${libs.servelet.classpath}:\
     ${libs.mercado_pago.classpath}:\
-    ${libs.jersey.classpath}
+    ${libs.jersey.classpath}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.akka-actor.jar}:\
+    ${file.reference.apache-commons-lang.jar}:\
+    ${file.reference.beansbinding-1.2.1.jar}:\
+    ${file.reference.com.sun.jersey.jersey-core-1.4.0.jar}:\
+    ${file.reference.commons-email-1.5.jar}:\
+    ${file.reference.gson-2.8.2-SNAPSHOT.jar}:\
+    ${file.reference.javax.servlet.jar}:\
+    ${file.reference.jersey-apache-client-1.6.jar}:\
+    ${file.reference.jersey-bundle-1.7.jar}:\
+    ${file.reference.jersey-client-1.6-sources.jar}:\
+    ${file.reference.jettison-1.0.3.jar}:\
+    ${file.reference.joda-time-2.9.9.jar}:\
+    ${file.reference.mail-1.4.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.org-apache-commons-codec.jar}:\
+    ${file.reference.org-apache-commons-logging.jar}:\
+    ${file.reference.org.apache.commons.httpclient.jar}:\
+    ${file.reference.scala-library-2.9.1.jar}:\
+    ${file.reference.sdkMercado_Pago-0.3.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
