--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,25 +32,47 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\AbsoluteLayout.jar
+file.reference.AbsoluteLayout.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\AbsoluteLayout.jar
+file.reference.AbsoluteLayout.jar-2=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\AbsoluteLayout.jar
 file.reference.akka-actor.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\akka-actor.jar
+file.reference.akka-actor.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\akka-actor.jar
 file.reference.apache-commons-lang.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\apache-commons-lang.jar
+file.reference.apache-commons-lang.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\apache-commons-lang.jar
 file.reference.beansbinding-1.2.1.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\beansbinding-1.2.1.jar
+file.reference.beansbinding-1.2.1.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\beansbinding-1.2.1.jar
 file.reference.com.sun.jersey.jersey-core-1.4.0.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\com.sun.jersey.jersey-core-1.4.0.jar
+file.reference.com.sun.jersey.jersey-core-1.4.0.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\com.sun.jersey.jersey-core-1.4.0.jar
 file.reference.commons-email-1.5.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\commons-email-1.5.jar
+file.reference.commons-email-1.5.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\commons-email-1.5.jar
 file.reference.gson-2.8.2-SNAPSHOT.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\gson-2.8.2-SNAPSHOT.jar
+file.reference.gson-2.8.2-SNAPSHOT.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\gson-2.8.2-SNAPSHOT.jar
 file.reference.javax.servlet.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\javax.servlet.jar
+file.reference.javax.servlet.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\javax.servlet.jar
 file.reference.jersey-apache-client-1.6.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\jersey-apache-client-1.6.jar
+file.reference.jersey-apache-client-1.6.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\jersey-apache-client-1.6.jar
 file.reference.jersey-bundle-1.7.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\jersey-bundle-1.7.jar
+file.reference.jersey-bundle-1.7.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\jersey-bundle-1.7.jar
 file.reference.jersey-client-1.6-sources.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\jersey-client-1.6-sources.jar
+file.reference.jersey-client-1.6-sources.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\jersey-client-1.6-sources.jar
 file.reference.jettison-1.0.3.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\jettison-1.0.3.jar
+file.reference.jettison-1.0.3.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\jettison-1.0.3.jar
 file.reference.joda-time-2.9.9.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\joda-time-2.9.9.jar
+file.reference.joda-time-2.9.9.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\joda-time-2.9.9.jar
+file.reference.jxl.jar=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\jxl.jar
 file.reference.mail-1.4.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\mail-1.4.jar
+file.reference.mail-1.4.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\mail-1.4.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\mysql-connector-java-5.1.23-bin.jar
 file.reference.org-apache-commons-codec.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\org-apache-commons-codec.jar
+file.reference.org-apache-commons-codec.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\org-apache-commons-codec.jar
 file.reference.org-apache-commons-logging.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\org-apache-commons-logging.jar
+file.reference.org-apache-commons-logging.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\org-apache-commons-logging.jar
 file.reference.org.apache.commons.httpclient.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\org.apache.commons.httpclient.jar
+file.reference.org.apache.commons.httpclient.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\org.apache.commons.httpclient.jar
 file.reference.scala-library-2.9.1.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\scala-library-2.9.1.jar
+file.reference.scala-library-2.9.1.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\scala-library-2.9.1.jar
 file.reference.sdkMercado_Pago-0.3.4.jar=C:\\Users\\Wallace\\Documents\\Dependencias\\sdkMercado_Pago-0.3.4.jar
+file.reference.sdkMercado_Pago-0.3.4.jar-1=C:\\Users\\Avel\u00e3\\Documents\\Netbeans Projects\\lib\\lib\\sdkMercado_Pago-0.3.4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -97,7 +119,29 @@ javac.classpath=\
     ${file.reference.org-apache-commons-logging.jar}:\
     ${file.reference.org.apache.commons.httpclient.jar}:\
     ${file.reference.scala-library-2.9.1.jar}:\
-    ${file.reference.sdkMercado_Pago-0.3.4.jar}
+    ${file.reference.sdkMercado_Pago-0.3.4.jar}:\
+    ${file.reference.AbsoluteLayout.jar-1}:\
+    ${file.reference.AbsoluteLayout.jar-2}:\
+    ${file.reference.akka-actor.jar-1}:\
+    ${file.reference.apache-commons-lang.jar-1}:\
+    ${file.reference.beansbinding-1.2.1.jar-1}:\
+    ${file.reference.com.sun.jersey.jersey-core-1.4.0.jar-1}:\
+    ${file.reference.commons-email-1.5.jar-1}:\
+    ${file.reference.gson-2.8.2-SNAPSHOT.jar-1}:\
+    ${file.reference.javax.servlet.jar-1}:\
+    ${file.reference.jersey-apache-client-1.6.jar-1}:\
+    ${file.reference.jersey-bundle-1.7.jar-1}:\
+    ${file.reference.jersey-client-1.6-sources.jar-1}:\
+    ${file.reference.jettison-1.0.3.jar-1}:\
+    ${file.reference.joda-time-2.9.9.jar-1}:\
+    ${file.reference.jxl.jar}:\
+    ${file.reference.mail-1.4.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}:\
+    ${file.reference.org-apache-commons-codec.jar-1}:\
+    ${file.reference.org-apache-commons-logging.jar-1}:\
+    ${file.reference.org.apache.commons.httpclient.jar-1}:\
+    ${file.reference.scala-library-2.9.1.jar-1}:\
+    ${file.reference.sdkMercado_Pago-0.3.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
